finish nav and create lists

--- a/index.html
+++ b/index.html
@@ -16,9 +16,51 @@
 
     <div class="container">
         <nav>
-            <button>Add Task</button>
-            <button>Add Section</button>
+            <button class="task-button">Add Task</button>
+            <button class="section-button">Add Section</button>
         </nav>
+
+        <main>
+            <div class="list">
+                <h2>&#9207; New Task</h2>
+                <ul>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Quarterly Newsletter
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="list">
+                <h2>&#9207; New Task</h2>
+                <ul>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Quarterly Newsletter
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Quarterly Newsletter
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Quarterly Newsletter
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Quarterly Newsletter
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                </ul>
+            </div>
+
+
+           
+        </main>
 
     </div>
 </body>
