--- a/index.html
+++ b/index.html
@@ -33,35 +33,56 @@
             </div>
 
             <div class="list">
-                <h2>&#9207; New Task</h2>
+                <h2>&#9207; Today</h2>
                 <ul>
                     <li>
                         <span class="check">&#10004;</span>
-                         Quarterly Newsletter
+                         Recruiting blog post
                          <span class="label editorial">Editorial</span>
                     </li>
                     <li>
                         <span class="check">&#10004;</span>
-                         Quarterly Newsletter
-                         <span class="label editorial">Editorial</span>
+                         Mobile app launch
+                         <span class="label goals">Q1 Goals</span>
+                    </li>
+                    <li>
+                        <span class="cross">&#10006;</span>
+                         Interview John H.
+                         <span class="label recruiting">Recruiting</span>
                     </li>
                     <li>
                         <span class="check">&#10004;</span>
-                         Quarterly Newsletter
-                         <span class="label editorial">Editorial</span>
-                    </li>
-                    <li>
-                        <span class="check">&#10004;</span>
-                         Quarterly Newsletter
-                         <span class="label editorial">Editorial</span>
+                         Summit update to mobile storefronts
+                         <span class="label mobile">Mobile</span>
                     </li>
                 </ul>
             </div>
 
-
-           
+            <div class="list">
+                <h2>&#9207; Upcoming</h2>
+                <ul>
+                    <li>
+                        <span class="cross">&#10006;</span>
+                         Schedule meeting with Alex
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Homepage refresh
+                         <span class="label website">Website</span>
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Onboard new Sales team members
+                         <span class="label sales">Sales</span>
+                    </li>
+                    <li>
+                        <span class="check">&#10004;</span>
+                         Review editorial calendar
+                         <span class="label editorial">Editorial</span>
+                    </li>
+                </ul>
+            </div>
         </main>
-
     </div>
 </body>
 </html>
